--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ subprojects {
     group = 'dev.kafein'
     version = '1.0.0'
 
-    sourceCompatibility = JavaVersion.VERSION_17
-    targetCompatibility = JavaVersion.VERSION_17
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 
     tasks.withType(JavaCompile).configureEach {
         options.encoding = 'UTF-8'
@@ -40,6 +40,9 @@ subprojects {
 
         compileOnly 'org.jetbrains:annotations:24.0.0'
         compileOnly 'org.checkerframework:checker-qual:3.12.0'
+
+        compileOnly 'com.google.guava:guava:32.1.1-jre'
+        compileOnly 'com.google.code.gson:gson:2.8.0'
     }
 
     test {
